# CheaperMac

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml  simulator.py
.github/workflows/: release.yml
scripts/: cheapermac.spec  make-binary
src/cheapermac/: cpu.py  main.py  memory.py  simulator.py
