[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cheapermac"
description = "Simulate living with a cheaper Mac with less system resources."
authors = [
    { name = "Thomas Waldmann", email = "tw@waldmann-edv.de" }
]
dynamic = ["version"]
dependencies = [
    "psutil>=5.9.8",
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pyinstaller",
]

[project.scripts]
cheapermac = "cheapermac.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/cheapermac/_version.py"
